# FYP

./: .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  a.cc  a.txt  analyse.ipynb  compile_commands.json  output.map  pl_mpeg_player  run
docs/: env.md
include/: ARMMailbox.h  FrameBuffer.h  asmdefs.h  errno.h  filter.h  frameBuffer.h  gpio.h  hdmiOut.h  mem.h  memCtrl.h  memcpyAarch64.h  miniuart.h  mm.h  mmio.h  mmu.h  newtonSqrt.h  peripheralReg.h  peripheral_reg.h  terminal.h  timer.h  types.h
include/common/: filter.h
include/common/pl_mpeg/: pl_mpeg.h
include/pl_mpeg/: pl_mpeg_player.c
lib/etl-20.39.4/: appveyor.yml
lib/etl-20.39.4/include/etl/: etl_profile.h
lib/pl_mpeg/: display_sdl.c  editNotice.md  pl_mpeg.h  pl_mpeg_player.c
src/: display_sdl.cc  display_sdl.cpp  display_sdl.h  filter.cc  filter.cpp  filter.h
src/common/: filter.cc  filter.cpp  pl_mpeg.cc
src/platform/baremetal/: ARMMailbox.cc  FrameBuffer.cc  fb.cc  frameBuffer.cc  gpio.cc  hdmiOut.cc  kernel.c  kernel.cc  mb.cc  mem.cc  memCtrl.cc  miniuart.cc  mmio.cc  mmu.cc  pl_mpeg.cc  timer.cc
src/platform/baremetal/config/: boot.S  config.txt  link.ld
src/platform/linux/: display_sdl.cc  pl_mpeg.cc
